--- a/src/app/auth/pages/singup/singup.component.html
+++ b/src/app/auth/pages/singup/singup.component.html
@@ -2,7 +2,7 @@
   <section class="clean-block clean-form dark">
     <div class="container">
       <div class="block-heading">
-        <h2 class="text-info">Registarte</h2>
+        <h2 class="text-info">Registrarte</h2>
         <p>
           Al registrarte podrás obtener todos lo benéficos gratuitos que ofrece
           nuestra plataforma, además, de poderte contactar con otros usuarios
