--- a/src/app/components-layout/footer/footer.component.html
+++ b/src/app/components-layout/footer/footer.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
-        <h5>Mas visitado</h5>
+        <h5>Más visitados</h5>
         <ul>
-          <li><a [routerLink]="['/home']" >inicio</a></li>
-          <li><a [routerLink]="['/singup']" >Registrate</a></li>
+          <li><a [routerLink]="['/home']" >Inicio</a></li>
+          <li><a [routerLink]="['/singup']" >Regístrate</a></li>
           <li><a [routerLink]="['/singin']" >Ingresa</a></li>
           <!-- <li><a [routerLink]="['/home']" >Vende</a></li> -->
           <!-- <li><a [routerLink]="['/home']" >Compra</a></li> -->
@@ -19,7 +19,7 @@
         </ul>
       </div>
       <div class="col-sm-3">
-        <h5>Soprte al cliente</h5>
+        <h5>Soporte al cliente</h5>
         <ul>
           <!-- <li><a [routerLink]="['/home']" >Preguntas y respuestas frecuentes (FAQ)</a></li> -->
           <li><a [routerLink]="['/contactus']" >Mesa de ayuda</a></li>
@@ -29,7 +29,7 @@
         <h5>Términos y condiciones</h5>
         <ul>
           <!-- <li><a [routerLink]="['/home']" >Términos de sericio</a></li> -->
-          <li><a [routerLink]="['/home']" >Términos y condiciones de uso </a></li>
+          <li><a [routerLink]="['/terms']" >Términos y condiciones de uso </a></li>
           <!-- <li><a [routerLink]="['/home']" >Politíca de privadicidad</a></li> -->
         </ul>
       </div>
