--- a/src/app/components-layout/navbar/navbar.component.html
+++ b/src/app/components-layout/navbar/navbar.component.html
@@ -77,7 +77,7 @@
                 "
                 [routerLink]="'/singup'"
               >
-                Registrarse
+              Regístrate
               </a>
             </li>
           </ng-container>
