--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -55,7 +55,7 @@
               src="assets/img/avatars/fotoAlejandro.png"
             />
             <div class="card-body info">
-              <h4 class="card-title">Diego Hernande</h4>
+              <h4 class="card-title">Diego Hernandez</h4>
               <p class="card-text">
                 Persona apasionada por la tecnología, se ha desempeñado como
                 instructor de programación, posee conocimientos de desarrollo
