--- a/src/app/pages/feautures/feautures.component.html
+++ b/src/app/pages/feautures/feautures.component.html
@@ -1,8 +1,8 @@
-<main class="page">
+  <main class="page">
   <section class="clean-block features">
     <div class="container">
       <div class="block-heading">
-        <h2 class="text-info">Caracteristicas</h2>
+        <h2 class="text-info">Características</h2>
         <p>
           Agrofrost te ofrece 
         </p>
@@ -10,9 +10,9 @@
       <div class="row justify-content-center">
         <div class="col-md-5 feature-box text-center">
           <i class="icon-star icon"></i>
-          <h4>Publiación Gratuita</h4>
+          <h4>Publicación Gratuita</h4>
           <p>
-            Podrás publicar de forma gratuita, los productos agrícolas que estes vendiendo, comprando o donde necesites algún tipo de contrato
+            Podrás publicar de forma gratuita, los productos agrícolas que estés vendiendo, comprando o donde necesites algún tipo de contrato
           </p>
           <p>
             <i class="fas fa-search-dollar fa-10x text-center"></i>
@@ -32,7 +32,7 @@
           <i class="icon-screen-smartphone icon"></i>
           <h4>Al instante</h4>
           <p>
-            Utilizamos tecnología de alta disponibilidad, por ello, tu publicación se vera al instante
+            Utilizamos tecnología de alta disponibilidad, por ello, tu publicación se verá al instante
           </p>
           <p>
             <i class="far fa-clock fa-10x"></i>
