--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
   </a>
 </div>
 </section>
-<a [routerLink]="['/tets']" routerLinkActive="router-link-active" >Componente Prueba</a>
+<!-- <a [routerLink]="['/tets']" routerLinkActive="router-link-active" >Componente Prueba</a> -->
 
 
   <!-- <app-deals></app-deals>  FIXME: usar servicio y mostar podrutos detatacads dv  -->
