--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -3,16 +3,16 @@
     <div class="container">
       <div class="block-heading">
         <h2 class="text-info">Planes</h2>
-        <p>Conoce nuestros planes, con ellos podras mejorar tu visibilidad</p>
+        <p>Conoce nuestros planes, con ellos podrás mejorar tu visibilidad</p>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-5 col-lg-4">
           <div class="clean-pricing-item plan">
             <div class="heading">
-              <h3>Basico</h3>
+              <h3>Basicó</h3>
             </div>
             <p>
-              Ideal cuando se esta planificando las cosechas, <br />
+              Ideal cuando se está planificando las cosechas, <br />
               "No tengo prisa"
             </p>
             <div class="features">
@@ -20,10 +20,10 @@
                 <span class="feature"> Primeros puestos: </span><span>No</span>
               </h4>
               <h4>
-                <span class="feature">Duración :&nbsp;</span><span>7 Dias</span>
+                <span class="feature">Duración :&nbsp;</span><span>7 Días</span>
               </h4>
               <h4>
-                <span class="feature">Anuncios maximos:&nbsp;</span
+                <span class="feature">Anuncios Máximos:&nbsp;</span
                 ><span>2</span>
               </h4>
             </div>
@@ -51,10 +51,10 @@
                 ><span>Si</span>
               </h4>
               <h4>
-                <span class="feature">Duracion: &nbsp;</span><span>7 Dias</span>
+                <span class="feature">Duración: &nbsp;</span><span>7 Días</span>
               </h4>
               <h4>
-                <span class="feature">Anuncios maximos:&nbsp;</span
+                <span class="feature">Anuncios Máximos:&nbsp;</span
                 ><span>3</span>
               </h4>
             </div>
@@ -81,10 +81,10 @@
                 ><span>Si</span>
               </h4>
               <h4>
-                <span class="feature">Duracion:&nbsp;</span><span>7 Dias</span>
+                <span class="feature">Duración:&nbsp;</span><span>7 Días</span>
               </h4>
               <h4>
-                <span class="feature">Anuncios Maximos:&nbsp;</span
+                <span class="feature">Anuncios Máximos:&nbsp;</span
                 ><span>10</span>
               </h4>
             </div>
