--- a/src/app/posts/pages/create-post/create-post.component.html
+++ b/src/app/posts/pages/create-post/create-post.component.html
@@ -4,7 +4,7 @@
       <div class="block-heading">
         <h2 class="text-info">Publicación</h2>
         <p>
-          Para mejoerar tu visbilidad te recomendamos ver nuestros
+          Para mejorar tu visibilidad te recomendamos ver nuestros
           <a class="text-info" [routerLink]="'/pricing'"> Planes</a>
         </p>
       </div>
@@ -178,7 +178,7 @@
           </div>
           <div class="mb-3">
             <p class="form-label">
-              ¿Producto tiene aval para expotación?
+              ¿Producto tiene aval para exportación?
             </p>
             <div class="form-check form-check-inline">
               <label class="form-check-label">Si</label>
@@ -207,7 +207,7 @@
               class="form-label"
               [class.text-danger]="campoEsInvalido('organico')"
             >
-              ¿Porducto organico?
+              ¿Producto orgánico?
             </p>
             <div class="form-check form-check-inline">
               <label class="form-check-label">Si</label>
@@ -235,10 +235,10 @@
           <div class="mb-3">
             <hr class="my-5" />
             <div class="text-center">
-              <h3 class="text-info">Imagenes</h3>
+              <h3 class="text-info">Imágenes</h3>
               <p>
                 La mejor forma de dar a conocer tus productos es dando a conocer
-                tus productos, por ello recomendamos que ajuents por lo menos
+                tus productos, por ello recomendamos que adjuntes por lo menos
                 una imagen
               </p>
             </div>
@@ -256,7 +256,7 @@
             </ng-container>
             <ng-template #noImagenes>
               <div class="text-center alert alert-warning">
-                No se ha subido imagenes
+                No se ha subido imágenes
               </div>
 
               <!-- <img src="./../../assets/placeholder.png" class="img-responsive"> -->
@@ -276,7 +276,7 @@
                 type="file"
               />
               <div id="newImagen" class="text-center">
-                Click para subir imagen
+                Clic para subir imágen
                 <p>Te quedan {{ 5 - imagenesBase64.length }}</p>
                 <small *ngIf="imagenesBase64.length > 1"
                   >Si no quieres añadir más imagenes puedes pasar <br />la
@@ -302,7 +302,7 @@
         <fieldset>
           <div class="text-center">
             <h3 class="text-info">Datos de referencia</h3>
-            <p class="mb-5">Brindanos informacíon para ubicar el producto</p>
+            <p class="mb-5">Bríndanos información para ubicar el producto</p>
           </div>
 
           <div class="mb-3">
@@ -372,7 +372,7 @@
           <label class="form-label" for="celular"> Numero Celular</label>
           <br />
           <small class="small"
-            >(Sera visble unicamente para usuarios Registrados)</small
+            >(  Sera visible únicamente para usuarios Registrados)</small
           >
           <input
             class="form-control item"
