--- a/src/app/posts/pages/posts/posts.component.html
+++ b/src/app/posts/pages/posts/posts.component.html
@@ -11,14 +11,14 @@
             <div class="d-none d-md-block">
               <div class="filters">
                 <div class="filter-item">
-                  <h3>Categories</h3>
+                  <h3>Categorías</h3>
                   <div class="form-check">
                     <input
                       class="form-check-input"
                       type="checkbox"
                       id="formCheck-1"
                     /><label class="form-check-label" for="formCheck-1"
-                      >Organico</label
+                      >Orgánico</label
                     >
                   </div>
                   <div class="form-check">
@@ -27,7 +27,7 @@
                       type="checkbox"
                       id="formCheck-2"
                     /><label class="form-check-label" for="formCheck-2"
-                      >industrail</label
+                      >Industrial</label
                     >
                   </div>
                   <div class="form-check">
@@ -41,14 +41,14 @@
                   </div>
                 </div>
                 <div class="filter-item">
-                  <h3>Piso termico</h3>
+                  <h3>Piso térmico</h3>
                   <div class="form-check">
                     <input
                       class="form-check-input"
                       type="checkbox"
                       id="formCheck-5"
                     /><label class="form-check-label" for="formCheck-5"
-                      >Calido</label
+                      >Cálido</label
                     >
                   </div>
                   <div class="form-check">
@@ -57,7 +57,7 @@
                       type="checkbox"
                       id="formCheck-6"
                     /><label class="form-check-label" for="formCheck-6"
-                      >Tempplado</label
+                      >Templado</label
                     >
                   </div>
                   <div class="form-check">
@@ -66,7 +66,7 @@
                       type="checkbox"
                       id="formCheck-7"
                     /><label class="form-check-label" for="formCheck-7"
-                      >Frio</label
+                      >Frío</label
                     >
                   </div>
                 </div>
