--- a/src/app/private-pages/dashboard/dashboard.component.html
+++ b/src/app/private-pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
         <h2>Tu información</h2>
         <p class="descripcion">
-          <span>Ingresa y modifica tu información basisca y de contacto</span>
+          <span>Ingresa y modifica tu información basicá y de contacto</span>
         </p>
         <p>
           <a class="btn btn-secondary" [routerLink]="'/posts'"
@@ -27,7 +27,7 @@
         <h2>Crear publicación</h2>
         <p class="descripcion">
           <span
-            >Aqui podras crear nuevas publicaciones</span
+            >Aquí podrás crear nuevas publicaciones</span
           >
         </p>
         <p>
@@ -47,7 +47,7 @@
         <p class="descripcion">
           <span
             >Aqui podras ver, actualizar y eliminar las ofertas y demandas de
-            productos agricolas que hallas realizado</span
+            productos agrícolas que hallas realizado</span
           >
         </p>
         <p>
@@ -68,7 +68,7 @@
 
         <h2>Compra</h2>
         <p class="descripcion">
-          Ve las ofertas que otros usarios tienene para ti
+          Ve las ofertas que otros usuarios tiene para ti
         </p>
         <p>
           <a class="btn btn-secondary" [routerLink]="'/posts'">Ver ofertas »</a>
