integrate ads from google adsence

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,4 +21,13 @@
 
   <!-- <app-deals></app-deals>  FIXME: usar servicio y mostar podrutos detatacads dv  -->
   
+
+
+
+
+  <app-ads-square class="home-ads">
+
+  </app-ads-square>
+
+  
 </main>
