--- a/src/app/posts/pages/post-detail/post-detail.component.html
+++ b/src/app/posts/pages/post-detail/post-detail.component.html
@@ -115,6 +115,13 @@
                 </agm-map>
               </div>
             </div>
+            <div class="col-xs-12 col-md-4">
+
+
+              <app-ads-square>
+                
+              </app-ads-square>
+            </div>
 
             <div class="row mt-5">
               <button class="btn btn-primary w-100" type="button">
