--- a/src/app/posts/pages/posts/posts.component.html
+++ b/src/app/posts/pages/posts/posts.component.html
@@ -229,7 +229,11 @@
                 </div> 
               </div>
 
-              <nav>
+              	<app-ads-square class="my-5">
+
+                </app-ads-square>
+              
+              <nav class="my-4">
                 <ul class="pagination">
                   <li class="page-item disabled">
                     <a class="page-link" href="#" aria-label="Previous"
