add news and plus optiosn to special post, regsiter user on db

--- a/src/app/ads/ads-square/ads-square.component.html
+++ b/src/app/ads/ads-square/ads-square.component.html
@@ -4,7 +4,11 @@
     
     
     <ng-adsense
+
+    [adSlot]="7259870550"
     [display]="'inline-block'"
+    [width]="320"
+    [height]="108"
    
     ></ng-adsense>
     
