--- a/src/app/posts/pages/posts/posts.component.html
+++ b/src/app/posts/pages/posts/posts.component.html
@@ -202,37 +202,30 @@
                 >
                   <app-product-card [post]="post"> </app-product-card>
                 </div>
+              </div>
+            
 
-                 <div class="col-12 col-md-6 col-lg-4">
-                  <div class="clean-product-item">
-                    <div class="image">
-                      <a href="#"
-                        ><img
-                          class="img-fluid d-block mx-auto"
-                          src="assets/img/tech/image2.jpg" /></a
-                      ><a href="#"></a>
-                    </div>
-                    <div class="product-name"><a href="#">Frijol</a></div>
-                    <div class="about">
-                      <div class="rating">
-                        <img src="assets/img/star.svg" /><img
-                          src="assets/img/star.svg"
-                        /><img src="assets/img/star.svg" /><img
-                          src="assets/img/star-half-empty.svg"
-                        /><img src="assets/img/star-empty.svg" />
-                      </div>
-                      <div class="price">
-                        <h3>$100</h3>
-                      </div>
-                    </div>
-                  </div>
-                </div> 
+              <div>
+                <agm-map
+                  [latitude]="posts[0].ubicacion.geolocalizacion.lat"
+                  [longitude]="posts[0].ubicacion.geolocalizacion.lng"
+                  [zoom]="8"
+                  [maxZoom]="12"
+                  [minZoom]="8"
+                  [usePanning]="true"
+                >
+                 
+                  <agm-marker *ngFor="let post of posts"
+                    [latitude]="post.ubicacion.geolocalizacion.lat"
+                    [longitude]="post.ubicacion.geolocalizacion.lng"
+                    [markerDraggable]="false"
+                  >
+                  </agm-marker>
+                </agm-map>
               </div>
 
-              	<app-ads-square class="my-5">
+              <app-ads-square class="my-5"> </app-ads-square>
 
-                </app-ads-square>
-              
               <nav class="my-4">
                 <ul class="pagination">
                   <li class="page-item disabled">
@@ -262,4 +255,4 @@
   </section>
 </main>
 
-<router-outlet ></router-outlet>
+<router-outlet></router-outlet>
