--- a/src/app/posts/shared/product-card/product-card.component.html
+++ b/src/app/posts/shared/product-card/product-card.component.html
@@ -1,10 +1,32 @@
 <div class="card product">
   <a
-    [routerLink]="['/posts/view',post.id]"
+    [routerLink]="['/posts/view', post.id]"
     routerLinkActive="router-link-active"
   >
-    <img class="img-fluid d-block mx-auto card-img-top" [src]="post.imgs[0]" />
+    <div class="img-card">
 
+      <ng-container 
+      *ngIf="post.publicitado; else noPublicitado">
+      <app-slider
+      class="img-fluid d-block mx-auto card-img-top"
+      [imgs]="post.imgs"
+      ></app-slider>
+      
+      </ng-container>
+        <ng-template #noPublicitado>
+          <img
+            class="img-fluid d-block mx-auto card-img-top"
+            [src]="post.imgs[0]"
+          />
+        </ng-template>
+    
+      <div *ngIf="post.publicitado" class="rating">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half"></i>
+      </div>
+    </div>
     <div class="card-body">
       <div class="info">
         <div class="card-title nombre-cultivo">
@@ -29,7 +51,7 @@
           <i class="fas fa-leaf"></i>
           <i *ngIf="post.caracteristicas.organico" class="fas fa-check"></i>
           <i *ngIf="!post.caracteristicas.organico" class="fas fa-ban"></i>
-         
+
           <i class="fas fa-plane-departure"></i>
           <i *ngIf="post.caracteristicas.exportacion" class="fas fa-check"></i>
           <i *ngIf="!post.caracteristicas.exportacion" class="fas fa-ban"></i>
