--- a/src/app/posts/shared/product-card/product-card.component.scss
+++ b/src/app/posts/shared/product-card/product-card.component.scss
@@ -1,63 +1,77 @@
 @import "src/boostrap_custom.scss";
 
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.product{
-    //border: 1px solid green;
-    margin: 10px;
-    box-shadow: 1px 1px 1px 1px rgba(grey, 0.2);
-    
-    &:hover {
-        box-shadow: 5px 2px rgba($color-verde-claro, 0.2);
-        background-color: rgba(grey, 0.2);
-        
-    }
-}
-.product img{
-    min-height: 200px;
-    max-height: 200px;
+.product {
+  //border: 1px solid green;
+  margin: 10px;
+  box-shadow: 1px 1px 1px 1px rgba(grey, 0.2);
+
+  &:hover {
+    box-shadow: 5px 2px rgba($color-verde-claro, 0.2);
+    background-color: rgba(grey, 0.2);
+  }
 }
 
-.nombre-cultivo{
-    min-height: 100px;
-
+.product .img-card {
+  position: relative;
 }
 
-.caracteristicas{
-
-    border-top: solid rgba(0, 0, 0, 0.1) 1px ;
-    border-bottom: solid rgba(0, 0, 0, 0.1) 1px ;
-    padding:  1rem 0;
-
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr ;
-}
-.caracteristicas .fa-check{
-    color: green;
-}
-.caracteristicas .fa-ban{
-    color: red;
+.product img,
+app-slider {
+  min-height: 170px;
+  max-height: 170px;
 }
 
-.card-body{
-    padding: 0px;
-}
-.info{
-    padding: 10px; 
+.product .rating {
+  background: $color-verde-oscuro;
+  position: absolute;
+  padding: 5px;
+  bottom: -10px;
+  right: 10px;
+  border-radius: 5px;
+
+  color: gold;
 }
 
-.end-card{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.nombre-cultivo {
+  min-height: 100px;
 }
 
-.municipio{
-    display: flex-end;
+.caracteristicas {
+  border-top: solid rgba(0, 0, 0, 0.1) 1px;
+  border-bottom: solid rgba(0, 0, 0, 0.1) 1px;
+  padding: 1rem 0;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
+}
+.caracteristicas .fa-check {
+  color: green;
+}
+.caracteristicas .fa-ban {
+  color: red;
 }
 
-.municipio i{
-    margin-left: .5rem;
+.card-body {
+  padding: 0px;
+}
+.info {
+  padding: 10px;
+}
+
+.end-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.municipio {
+  display: flex-end;
+}
+
+.municipio i {
+  margin-left: 0.5rem;
 }
