add scrips adsese

--- a/src/app/ads/ads-square/ads-square.component.html
+++ b/src/app/ads/ads-square/ads-square.component.html
@@ -5,13 +5,16 @@
     
     <ng-adsense
 
-    [adSlot]="7259870550"
+    [adSlot]="7494266154" 
     [display]="'inline-block'"
-    [width]="320"
-    [height]="108"
-   
+    [width]="310"
+    [height]="110"
+   [fullWidthResponsive]="true" 
+   [adFormat]="'auto'"
+    >
     ></ng-adsense>
     
+    <!-- [display]="'inline-block'" -->
     <!-- [width]="320"
     [height]="108" -->
 </div>
