--- a/src/app/pages/feautures/feautures.component.html
+++ b/src/app/pages/feautures/feautures.component.html
@@ -52,3 +52,17 @@
     </div>
   </section>
 </main>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1885720016268385"
+     crossorigin="anonymous"></script>
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1885720016268385"
+     data-ad-slot="7494266154"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
